Issue #618 fix: Header-manibody properly aligned

--- a/org.ekstep.collectioneditor-1.0/editor/collectioneditor.css
+++ b/org.ekstep.collectioneditor-1.0/editor/collectioneditor.css
@@ -14,8 +14,6 @@ body {
 #collectionMasterhead {
     padding: 0 1em;
     height: 100vh;
-    padding-left: 2em;
-    padding-right: 2em;
     background: #fff;
 }
 
